@@ -7,7 +7,7 @@ class GenericWebImporter (ImporterPlugin, Pluggable):
 
     name = _('Webpage')
     patterns = ['*.htm','*.html','*.xhtml']
-    mimetypes = ['text/html','text/xhtml']
+    mimetypes = ['text/html','text/xhtml','application/xhtml+xml','application/xhtml','application/html']
     targets = ['webimport_plugin']
 
     def __init__ (self, *args, **kwargs):
@@ -23,6 +23,7 @@ class GenericWebImporter (ImporterPlugin, Pluggable):
         return -1 # We are a fallback option
 
     def test_url (self, url, data, content_type):
+        print 'Generic Web testing ',url
         for p in self.plugins:
             if p.test_url(url, data):
                 return 1
@@ -30,9 +31,11 @@ class GenericWebImporter (ImporterPlugin, Pluggable):
             iter(content_type)
         except:
             # In this case, content_type cannot be html...
-            pass
+            print 'No content type'
+            return None
         else:
             if 'html' in content_type:
+                print 'Generic Web Importer as fallback!'
                 return -1 # We are the fallback option
 
     def get_web_importer (self, url, data, content_type):
